src/objects/TCode_Product_Incentive__c.object
<CustomObject>
    <description>Junction object between TCode Product and Incentives. Defines which incentives should be available for which campaign products. These are also limited by the subscription type (length/payment type setup).</description>
    <fields>
        <fullName>Auto_Assign_for_Zuora_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if this incentive should be auto assigned to the subscription on activation.</description>
        <inlineHelpText>Defines if this incentive should be auto assigned to the subscription on activation.</inlineHelpText>
        <label>Auto Assign for Zuora Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Description__c</fullName>
        <formula>Incentive__r.Incentive_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Name__c</fullName>
        <formula>Incentive__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Validity_Status__c</fullName>
        <formula>Incentive__r.Validity_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Validity Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <referenceTo>Incentive__c</referenceTo>
        <relationshipLabel>TCode Product Incentives</relationshipLabel>
        <relationshipName>TCode_Product_Incentives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Incentive_Valid_For_Renewal__c</fullName>
        <formula>Incentive__r.Is_Valid_For_Renewal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Incentive Valid For Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>Subscription type which for incentive are applicable</description>
        <label>Subscription Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continuous 13 Week Applicable</fullName>
                </value>
                <value>
                    <fullName>Continuous 26 Week Applicable</fullName>
                </value>
                <value>
                    <fullName>Continuous 52 Week Applicable</fullName>
                </value>
                <value>
                    <fullName>One Off 13 Week Applicable</fullName>
                </value>
                <value>
                    <fullName>One Off 26 Week Applicable</fullName>
                </value>
                <value>
                    <fullName>One Off 52 Week Applicable</fullName>
                </value>
                <value>
                    <fullName>Digital - Monthly</fullName>
                </value>
                <value>
                    <fullName>Digital - Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCode_Product__c</fullName>
        <label>TCode Product</label>
        <referenceTo>TCode_Product__c</referenceTo>
        <relationshipLabel>TCode Product Incentives</relationshipLabel>
        <relationshipName>TCode_Product_Incentives</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TCode Product Incentive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Incentive_Description__c</columns>
        <columns>TCode_Product__c</columns>
        <columns>Subscription_Type__c</columns>
        <columns>Incentive_Validity_Status__c</columns>
        <columns>Is_Incentive_Valid_For_Renewal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TPI-{00000}</displayFormat>
        <label>TCode Product Incentive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCode Product Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>